--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "next": "11.0.1",
+    "prismic-dom": "^2.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "sass": "^1.35.1"
   },
   "devDependencies": {
-    "@types/node": "^15.14.0",
+    "@types/node": "^15.14.2",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.13",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.1",
